Moving overflow change to separate assessment. Alignment fix completed

--- a/src/server/static/streamnode.css
+++ b/src/server/static/streamnode.css
@@ -94,6 +94,7 @@ body {
 	flex: 1 1 auto;
 	margin-right: 1rem;
 	text-overflow: ellipsis;
+	overflow: hidden;
 	white-space: nowrap;
 	display: block;
 }
